Fix header padding
Header padding was too high. Menu must be closer to Hugo Bessa name.

--- a/app/_assets/_scss/_components.header.scss
+++ b/app/_assets/_scss/_components.header.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 .header{
-    @extend .pe\+;
+    @extend .pt\+;
 
     a{
         color: $color-black;
@@ -11,7 +11,7 @@
     }
 
     @media all and (max-width: $max-width){
-        padding: halve($inuit-base-spacing-unit) 0 !important;
+        padding-top: halve($inuit-base-spacing-unit) !important;
     }
 }
 
